# HTL-Vill-Codinglab

./: .gitignore  .gitlab-ci.yml  README.md  TODO.md  package-lock.json  package.json  svelte.config.js
.github/workflows/: publish.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/icons/: icon.icns
src-tauri/python/: level1.py  level2.py  level3.py  sol1.py  sol2.py
src-tauri/src/: main.rs
src/components/: CodeBlock.svelte  CodeInput.svelte  ConsoleOutput.svelte  ExerciseCard.svelte  ExercisePage.svelte  InteractiveCodeExample.svelte  LessonCard.svelte  LessonPage.svelte  LevelLayout.svelte  NavButtons.svelte  SMTPCredentialsModal.svelte
src/routes/: +error.svelte  +layout.js  +layout.svelte  +page.svelte  style.css
src/routes/checkCode/: +page.svelte
src/routes/end/: +page.svelte
src/routes/home/: +page.svelte
src/routes/level1/aufgabe/: +page.svelte
src/routes/level1/inhalt/: +layout.svelte  +layout.ts
src/routes/level1/inhalt/code_example/: +page.svelte
src/routes/level1/inhalt/if/aufg/: +page.svelte
src/routes/level1/inhalt/if/expl/: +page.svelte
src/routes/level1/inhalt/input/aufg/: +page.svelte
src/routes/level1/inhalt/input/expl/: +page.svelte
src/routes/level1/inhalt/print/aufg/: +page.svelte
src/routes/level1/inhalt/print/expl/: +page.svelte
src/routes/level1/inhalt/variable/aufg/: +page.svelte
src/routes/level1/inhalt/variable/expl/: +page.svelte
src/routes/level2/aufgabe/: +page.svelte
src/routes/level2/aufgabe1/: +page.svelte
src/routes/level2/exp1/: +page.svelte
src/routes/level3/aufgabe/: +page.svelte
src/routes/level3/aufgabe1/: +page.svelte
src/routes/level3/exp1/: +page.svelte
src/utils/: highlight.ts  lib.ts  stores.ts  useButtonState.ts  useLevelTimer.ts  validation.ts  vscodeutils.ts
updates/: updates.json
updates/0.1.0/: codinglab_0.1.0_x64-setup.nsis.zip.sig
