[package]
name = "codinglab"
version = "0.1.2"
description = "Coding Lab 2024 Tag der offenen Tür HTL Villach"
authors = ["Sitter Max", "Rechberger Simon"]
default-run = "codinglab"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = [ "shell-open", "updater", "process-command-api", "process-exit", "fs-all", "dialog-all"] }
pyo3 = "0.20.2"
regex = "1.10.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
